[gd_scene load_steps=5 format=3 uid="uid://b1r0b3dau4ln3"]

[ext_resource type="TileSet" uid="uid://cp5qk6fenyhap" path="res://garden_tileset.tres" id="1_tgygg"]
[ext_resource type="Script" path="res://scripts/tile_preview.gd" id="3_2pwkn"]
[ext_resource type="Script" path="res://scripts/tile_manager.gd" id="3_83euq"]
[ext_resource type="PackedScene" uid="uid://c52yy8p8cbscs" path="res://scenes/light_tile.tscn" id="3_skubb"]

[node name="Garden" type="Node2D"]
texture_filter = 1
scale = Vector2(2, 2)

[node name="Layer0" type="TileMap" parent="."]
modulate = Color(0.741176, 0.721569, 0.85098, 1)
tile_set = ExtResource("1_tgygg")
cell_quadrant_size = 8
format = 2
layer_0/tile_data = PackedInt32Array(786441, 3, 0, 720906, 3, 0, 786442, 3, 0, 851978, 3, 0, 917514, 3, 0, 1048586, 3, 0, 720907, 3, 0, 786443, 3, 0, 851979, 3, 0, 917515, 3, 0, 1048587, 3, 0, 655372, 3, 0, 720908, 3, 0, 786444, 3, 0, 851980, 3, 0, 917516, 3, 0, 1048588, 3, 0, 655373, 3, 0, 720909, 3, 0, 786445, 3, 0, 851981, 3, 0, 655374, 3, 0, 720910, 3, 0, 786446, 3, 0, 851982, 3, 0, 983054, 3, 0, 655375, 3, 0, 720911, 3, 0, 786447, 3, 0, 851983, 3, 0, 983055, 3, 0, 720912, 3, 0, 786448, 3, 0, 851984, 3, 0, 983056, 3, 0, 851985, 3, 0, 851977, 3, 0, 917513, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 917517, 3, 0, 983053, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 655371, 3, 0, 1048589, 3, 0, 1048590, 3, 0)

[node name="Layer1" type="TileMap" parent="."]
modulate = Color(0.7744, 0.7832, 0.88, 1)
z_index = 1
position = Vector2(0, -4)
tile_set = ExtResource("1_tgygg")
cell_quadrant_size = 8
format = 2

[node name="Layer2" type="TileMap" parent="."]
modulate = Color(0.8281, 0.84175, 0.91, 1)
z_index = 2
position = Vector2(0, -8)
tile_set = ExtResource("1_tgygg")
cell_quadrant_size = 8
format = 2

[node name="Layer3" type="TileMap" parent="."]
modulate = Color(0.8836, 0.8977, 0.94, 1)
z_index = 3
position = Vector2(0, -12)
tile_set = ExtResource("1_tgygg")
cell_quadrant_size = 8
format = 2

[node name="Layer4" type="TileMap" parent="."]
modulate = Color(0.9409, 0.9506, 0.97, 1)
z_index = 4
position = Vector2(0, -16)
tile_set = ExtResource("1_tgygg")
cell_quadrant_size = 8
format = 2

[node name="Layer5" type="TileMap" parent="."]
z_index = 5
position = Vector2(0, -20)
tile_set = ExtResource("1_tgygg")
cell_quadrant_size = 8
format = 2

[node name="TileManager" type="Node2D" parent="." node_paths=PackedStringArray("layers")]
script = ExtResource("3_83euq")
layers = [NodePath("../Layer0"), NodePath("../Layer1"), NodePath("../Layer2"), NodePath("../Layer3"), NodePath("../Layer4"), NodePath("../Layer5")]
light_scene = ExtResource("3_skubb")

[node name="TopPreview" type="Sprite2D" parent="TileManager"]
unique_name_in_owner = true
z_as_relative = false
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 8, 8)

[node name="Top" type="Polygon2D" parent="TileManager/TopPreview"]
modulate = Color(0, 0, 0, 1)
invert_enabled = true
invert_border = 1.0
polygon = PackedVector2Array(1, 1, 7, 1, 7, 7, 1, 7)

[node name="Preview" type="Sprite2D" parent="TileManager"]
z_as_relative = false
y_sort_enabled = true
centered = false
offset = Vector2(0, 8)
region_enabled = true
region_rect = Rect2(0, 8, 8, 4)
script = ExtResource("3_2pwkn")

[node name="Side" type="Polygon2D" parent="TileManager/Preview"]
modulate = Color(0, 0, 0, 1)
invert_enabled = true
invert_border = 1.0
polygon = PackedVector2Array(1, 9, 7, 9, 7, 11, 1, 11)

[connection signal="texture_changed" from="TileManager/Preview" to="TileManager/Preview" method="_on_texture_changed"]
